--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "vite": "^5.0.0"
-  }
+ "dependencies": {
+  "react": "17.0.2",
+  "react-dom": "17.0.2"
+},
+"devDependencies": {
+  "vite": "^5.0.0"
+}
 }
