--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build"
   },
- "dependencies": {
-  "react": "17.0.2",
-  "react-dom": "17.0.2"
-},
-"devDependencies": {
-  "vite": "^5.0.0"
-}
+  "dependencies": {
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "vite": "^5.0.0"
+  }
 }
